# AI-teacher

./: .gitignore  package-lock.json  package.json  pyproject.toml  research-section-3-ai-conversational-learning.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
research/: 01-cognitive-science-zh.md  01-cognitive-science.md  02-pedagogy-tutoring-zh.md  02-pedagogy-tutoring.md  03-ai-conversational-systems-zh.md  03-ai-conversational-systems.md  04-ux-interaction-design-conversational-learning-zh.md  04-ux-interaction-design-conversational-learning.md  05-assessment-retention-zh.md  05-assessment-retention.md
src/ai_teacher/: main.py  parsers.py  system_prompt.py
src/app/: layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/upload/: route.ts
src/app/chat/: page.tsx
src/components/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  DocumentUpload.tsx  TTSControl.tsx  TopicInput.tsx  VoiceButton.tsx
src/hooks/: useChat.ts  useSpeechRecognition.ts  useSpeechSynthesis.ts
src/lib/: systemPrompt.ts
src/types/: index.ts
static/: chat.html  index.html
